# lab

./: lab2  lab4  lab5-6
DZ/: CMakeLists.txt  README.md  instruction.txt  main.cpp
DZ/for_this_damn_carriage_to_work/: function.h  global.h
